=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

 - Added a new tab for views which lists available views and their properties.

 - Updated ``information_schema.tables`` queries to return only tables, but not
   views, in order to be compatible with future versions of CrateDB.


2018/03/20 1.9.0
================

Changes
-------

 - Adapted queries to be compatible with CrateDB 3.0+

2018/03/19 1.8.4
================

Fixes
-----

 - Fixed handling of ``null`` values correctly in Cluster Tab of the Admin UI.

 - Updated the ``Size`` label in the table detail to ``Size (Sum of primary shards)``

2018/03/06 1.8.3
================

Fixes
-----

 - Updated the link to the stat collection in the monitoring plugin.

 - Updated the table list search to filter tables only by table name and table
   schema.

 - Fixed an issue that caused the table list to display wrong results.

2018/02/09 1.8.2
================

Fixes
-----

 - Fix an issue that caused the translation strings to not be loaded correctly. 

2018/01/16 1.8.1
================

Fixes
-----

 - Fix an issue that caused the ``Cluster`` tab to not be loaded correctly. 

 - Map the Tab key to insert spaces instead of a tab character.

 - Fixed an issue that caused the user name to not be displayed.

2017/12/l5 1.8.0
================

Changes
-------

 - Updated CPU usage graph to use the value provided by ``os['cpu']['used']``.
   The graph does not show system/user/idle/stolen values any more.

2017/12/14 1.7.4
================

Fixes
-----

 - Remove horizontal scroll from the console editor.

 - Console results pagination is reset to 1 after each execution.

 - Calculate "idle" process CPU usage correctly and show it in the
   "CrateDB CPU Usage" graph.

 - Fixed an issue that caused the Admin UI to not display any tables when the 
   file system data are not fetchable.
