@@ -10,13 +10,7 @@
           {{ 'TABLE.NAME' | translate }}
         </div>
         <p class="cr-panel-block__item__content--full-width cr-panel--default">
-          <ng-pluralize ng-init="translationKey='TABLE.TITLE'" count="nr_of_tables"
-          when="{
-              '0': '{{ translationKey | translate }} ({})',
-              '1': '{{ table_label }}',
-              'other': '{{ table_label }}'}">
-          </ng-pluralize>
-        <span class="small" ng-show="isParted">(partitioned)</span>
+          {{ table.label }} <span class="small" ng-show="isParted">(partitioned)</span>
         </p>
       </div>
       <div class="table-detail__cell">
